WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
214023
<attachment> layout does not scale with Dynamic Type size changes
https://bugs.webkit.org/show_bug.cgi?id=214023
Summary
<attachment> layout does not scale with Dynamic Type size changes
Tim Horton
Reported
2020-07-06 17:21:03 PDT
<attachment> layout needs to scale with Dynamic Type size changes
Attachments
Patch
(8.36 KB, patch)
2020-07-06 17:23 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Patch
(8.35 KB, patch)
2020-07-06 17:24 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Patch
(8.35 KB, patch)
2020-07-06 17:24 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Patch
(17.60 KB, patch)
2020-07-06 22:05 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Patch
(17.64 KB, patch)
2020-07-07 01:23 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2020-07-06 17:23:14 PDT
<
rdar://problem/64914762
>
Tim Horton
Comment 2
2020-07-06 17:23:30 PDT
Created
attachment 403645
[details]
Patch
Tim Horton
Comment 3
2020-07-06 17:24:08 PDT
Created
attachment 403646
[details]
Patch
Tim Horton
Comment 4
2020-07-06 17:24:54 PDT
Created
attachment 403647
[details]
Patch
Sam Weinig
Comment 5
2020-07-06 17:57:40 PDT
Comment on
attachment 403647
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=403647&action=review
> Source/WebCore/ChangeLog:9 > + No new tests; we don't currently have a mechanism for varying Dynamic Type size in tests.
Seems like the right time to add one!
Tim Horton
Comment 6
2020-07-06 18:10:42 PDT
(In reply to Sam Weinig from
comment #5
)
> Comment on
attachment 403647
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=403647&action=review
> > > Source/WebCore/ChangeLog:9 > > + No new tests; we don't currently have a mechanism for varying Dynamic Type size in tests. > > Seems like the right time to add one!
Only in the "best time to plant a tree" sense. When someone was implementing DT-related font-y features would be the "right time".
Sam Weinig
Comment 7
2020-07-06 18:41:03 PDT
(In reply to Tim Horton from
comment #6
)
> (In reply to Sam Weinig from
comment #5
) > > Comment on
attachment 403647
[details]
> > Patch > > > > View in context: > >
https://bugs.webkit.org/attachment.cgi?id=403647&action=review
> > > > > Source/WebCore/ChangeLog:9 > > > + No new tests; we don't currently have a mechanism for varying Dynamic Type size in tests. > > > > Seems like the right time to add one! > > Only in the "best time to plant a tree" sense. When someone was implementing > DT-related font-y features would be the "right time".
No time like the present!
Tim Horton
Comment 8
2020-07-06 20:07:38 PDT
(In reply to Sam Weinig from
comment #7
)
> (In reply to Tim Horton from
comment #6
) > > (In reply to Sam Weinig from
comment #5
) > > > Comment on
attachment 403647
[details]
> > > Patch > > > > > > View in context: > > >
https://bugs.webkit.org/attachment.cgi?id=403647&action=review
> > > > > > > Source/WebCore/ChangeLog:9 > > > > + No new tests; we don't currently have a mechanism for varying Dynamic Type size in tests. > > > > > > Seems like the right time to add one! > > > > Only in the "best time to plant a tree" sense. When someone was implementing > > DT-related font-y features would be the "right time". > > No time like the present!
I have no doubt I will come to regret it as much as I always do when I add one-off bits for things like this, but I will see what I can do.
Tim Horton
Comment 9
2020-07-06 22:05:28 PDT
Created
attachment 403667
[details]
Patch
Tim Horton
Comment 10
2020-07-07 01:23:17 PDT
Created
attachment 403675
[details]
Patch
Sam Weinig
Comment 11
2020-07-07 07:40:29 PDT
(In reply to Tim Horton from
comment #8
)
> (In reply to Sam Weinig from
comment #7
) > > (In reply to Tim Horton from
comment #6
) > > > (In reply to Sam Weinig from
comment #5
) > > > > Comment on
attachment 403647
[details]
> > > > Patch > > > > > > > > View in context: > > > >
https://bugs.webkit.org/attachment.cgi?id=403647&action=review
> > > > > > > > > Source/WebCore/ChangeLog:9 > > > > > + No new tests; we don't currently have a mechanism for varying Dynamic Type size in tests. > > > > > > > > Seems like the right time to add one! > > > > > > Only in the "best time to plant a tree" sense. When someone was implementing > > > DT-related font-y features would be the "right time". > > > > No time like the present! > > I have no doubt I will come to regret it as much as I always do when I add > one-off bits for things like this, but I will see what I can do.
Awww. Another approach you could take, if you don't want to mess with WebCore::Internals is to add support in WebKitTestRunner (or just do it in TestWebKitAPI) that overrides [WKWebView _contentSizeCategory] and sends the UIContentSizeCategoryDidChangeNotification notification. It might make sense to override [WKWebView _contentSizeCategory] regardless so we have consistent testing on devices that might have had some changes (though I think your call in Internals::resetToConsistentState() should cover most cases).
Tim Horton
Comment 12
2020-07-07 10:25:55 PDT
That's what I assumed I was going to have to do when I was whining. The Internals thing is way less annoying (no bounce to the UI process, no asynchrony in the test, etc.).
EWS
Comment 13
2020-07-07 10:38:31 PDT
Committed
r264027
: <
https://trac.webkit.org/changeset/264027
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 403675
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug